Поправлены ссылки между страницами

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
+  <header class="main-header">
     <div class="container">
       <p class="logo">DEVICE</p>
-      <form action="url" method="post">
+      <form action="url" method="get">
         <button type="submit" name="search">Поиск</button>
         <input type="search" name="search-field" placeholder="Поиск по сайту" />
       </form>
@@ -163,7 +163,7 @@
       <p><a href="#" class="btn">Напишите нам</a></p>
     </section>
   </div>
-  <footer>
+  <footer class="main-footer">
     <div class="container">
       <p class="logo">DEVICE</p>
       <div class="footer-user-area">
