--- a/catalog.html
+++ b/catalog.html
@@ -6,10 +6,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
+  <header class="main-header">
     <div class="container">
       <p class="logo"><a href="index.html">DEVICE</a></p>
-      <form action="url" method="post">
+      <form action="url" method="get">
         <button type="submit" name="search">Поиск</button>
         <input type="search" name="search-field" placeholder="Поиск по сайту" />
       </form>
@@ -45,8 +45,8 @@
     <div class="container">
       <h1>Моноподы для селфи</h1>
       <ul class="breadcrumbs">
-          <li><a href="#">Главная</a></li>
-          <li><a href="#">Каталог товаров</a></li>
+          <li><a href="index.html">Главная</a></li>
+          <li><a href="catalog.html">Каталог товаров</a></li>
           <li class="current-page">Моноподы для селфи</li>
         </ul>
     </div>
@@ -123,7 +123,7 @@
       </section>
     </div>
   </main>
-  <footer>
+  <footer class="main-footer">
     <div class="container">
       <p class="logo">DEVICE</p>
       <div class="footer-user-area">
