--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Device - Главная</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header class="main-header">
     <div class="container">
-      <div class="logo"><img src="img/logo.svg" alt="Device"></div>
+      <div class="logo"><img src="img/logo.svg" width="184" height="40" alt="Device"></div>
       <form action="url" method="get">
         <button type="submit" name="search">Поиск</button>
         <input type="search" name="search-field" placeholder="Поиск по сайту" />
@@ -52,8 +52,8 @@
     </div>
     <ol class="slider">
       <li class="slide slide-1">
-        <img src="img/slider-1.png" width="384" height="486" alt="Селфи-палка 8 м">
         <h2 class="slide-header">Делай селфи, как Бен Стиллер!</h2>
+        <img src="img/slider-1.png" width="384" height="486" alt="Селфи-палка 8 м">
         <p>Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
         <a href="#" class="btn">Подробнее</a>
         <table class="basic-features">
@@ -70,8 +70,8 @@
         </table>
       </li>
       <li class="slide slide-2">
-        <img src="img/slider-2.png" width="345" height="485" alt="Фитнес-браслет">
         <h2 class="slide-header">Худеем правильно!</h2>
+        <img src="img/slider-2.png" width="345" height="485" alt="Фитнес-браслет">
         <p>Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
         <a href="#" class="btn">Подробнее</a>
         <table class="basic-features">
@@ -84,16 +84,16 @@
         </table>
       </li>
       <li class="slide slide-3">
-        <img src="img/slider-3.png" width="526" height="334" alt="Селфи-палка 8 м">
         <h2 class="slide-header">Порхает как бабочка, жалит как пчела!</h2>
+        <img src="img/slider-3.png" width="526" height="334" alt="Селфи-палка 8 м">
         <p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
         <a href="#" class="btn">Подробнее</a>
         <table class="basic-features">
-          <tr class="values">
+          <tr class="basic-features-values">
             <td>800 м</td>
             <td>50 м</td>
           </tr>
-          <tr class="features">
+          <tr class="basic-features-parameters">
             <th>Дальность полета</th>
             <th>Радиус поражения</th>
           </tr>
@@ -165,7 +165,7 @@
   </div>
   <footer class="main-footer">
     <div class="container">
-      <p class="logo">DEVICE</p>
+      <div class="logo"><img src="img/logo-footer.svg" width="184" height="40" alt="Device"></div>
       <div class="footer-user-area">
         <p class="user-block"><a href="#">Войти</a></p>
         <p>
