--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </nav>
       </div>
   </header>
-  <section class="product-slider">
+  <section class="container product-slider">
     <input type="radio" name="slider-switch" id="product-1" checked>
     <input type="radio" name="slider-switch" id="product-2">
     <input type="radio" name="slider-switch" id="product-3">
@@ -52,7 +52,7 @@
     </div>
     <ol class="slider">
       <li class="slide slide-1">
-        <h2 class="slide-header">Делай селфи, как Бен Стиллер!</h2>
+        <h2 class="header">Делай селфи, как Бен Стиллер!</h2>
         <img src="img/slider-1.png" width="384" height="486" alt="Селфи-палка 8 м">
         <p>Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
         <a href="#" class="btn">Подробнее</a>
@@ -70,7 +70,7 @@
         </table>
       </li>
       <li class="slide slide-2">
-        <h2 class="slide-header">Худеем правильно!</h2>
+        <h2 class="header">Худеем правильно!</h2>
         <img src="img/slider-2.png" width="345" height="485" alt="Фитнес-браслет">
         <p>Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
         <a href="#" class="btn">Подробнее</a>
@@ -84,7 +84,7 @@
         </table>
       </li>
       <li class="slide slide-3">
-        <h2 class="slide-header">Порхает как бабочка, жалит как пчела!</h2>
+        <h2 class="header">Порхает как бабочка, жалит как пчела!</h2>
         <img src="img/slider-3.png" width="526" height="334" alt="Селфи-палка 8 м">
         <p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
         <a href="#" class="btn">Подробнее</a>
@@ -112,10 +112,10 @@
     </ul>
   </div>
   <section class="services-slider">
-    <input type="radio" name="services-slider-radio" id="service-1" checked>
-    <input type="radio" name="services-slider-radio" id="service-2">
-    <input type="radio" name="services-slider-radio" id="service-3">
     <div class="container">
+      <input type="radio" name="services-slider-radio" id="service-1" checked>
+      <input type="radio" name="services-slider-radio" id="service-2">
+      <input type="radio" name="services-slider-radio" id="service-3">
       <div class="services-slider-switch">
         <label for="service-1">Доставка</label>
         <label for="service-2">Гарантия</label>
@@ -123,15 +123,15 @@
       </div>
       <ul>
         <li class="service-description delivery">
-          <h2>Доставка</h2>
+          <h2 class="header">Доставка</h2>
           <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
         </li>
         <li class="service-description warranty">
-          <h2>Гарантия</h2>
+          <h2 class="header">Гарантия</h2>
           <p>Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
         </li>
         <li class="service-description credit">
-          <h2>Кредит</h2>
+          <h2 class="header">Кредит</h2>
           <p>Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для нашего банка, разумеется.</p>
         </li>
       </ul>
@@ -146,7 +146,7 @@
   </section>
   <div class="container about-contacts">
     <section class="about-us">
-      <h2>О нас</h2>
+      <h2 class="header">О нас</h2>
       <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
       <p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
       <ul>
@@ -157,7 +157,7 @@
       <a href="#" class="btn">Подробнее о нас</a>
     </section>
     <section class="contacts">
-      <h2>Контакты</h2>
+      <h2 class="header">Контакты</h2>
       <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
       <img src="img/map.jpg" width="560" height="222" alt="">
       <p><a href="#" class="btn">Напишите нам</a></p>
