--- a/catalog.html
+++ b/catalog.html
@@ -80,7 +80,7 @@
           </form>
         </section>
         <section class="catalog-page">
-          <h2 class="hidden-header">Страница каталога</h2>
+          <h2 class="visually-hidden">Страница каталога</h2>
           <div class="catalog-sort">
             <p class="sort-categories">Сортировка:
               <a href="#">По цене</a>
