--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     </div>
   </section>
   <section class="container logotypes">
-    <h2 class="hidden-header">Партнёры</h2>
+    <h2 class="visually-hidden">Партнёры</h2>
     <img src="img/logo-1.jpg" width="260" height="100" alt="DJI">
     <img src="img/logo-2.jpg" width="260" height="100" alt="SP Gadgets">
     <img src="img/logo-3.jpg" width="260" height="100" alt="GoPro">
