Исправления по кнопкам

--- a/catalog.html
+++ b/catalog.html
@@ -22,8 +22,8 @@
       </div>
       <nav class="main-nav">
         <ul>
-          <li>Каталог товаров
-            <button class="main-nav-submenu-open">Открыть подменю каталога</button>
+          <li>
+            <button class="main-nav-submenu-open" type="button">Каталог товаров</button>
             <div class="catalog-submenu">
               <ul>
                 <li><a href="#">Виртуальная реальность</a></li>
@@ -100,8 +100,8 @@
               <p>500 руб.</p>
               <img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
               <div class="catalog-item-hover">
-                <button class="btn">В корзину</button>
-                <button class="add-to-comparison">Добавить к сравнению</button>
+                <button class="btn" type="button">В корзину</button>
+                <button class="add-to-comparison" type="button">Добавить к сравнению</button>
               </div>
             </article>
             <article class="catalog-item">
@@ -109,8 +109,8 @@
               <p>1 500 руб.</p>
               <img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
               <div class="catalog-item-hover">
-                <button class="btn">В корзину</button>
-                <button class="add-to-comparison">Добавить к сравнению</button>
+                <button class="btn" type="button">В корзину</button>
+                <button class="add-to-comparison" type="button">Добавить к сравнению</button>
               </div>
             </article>
             <article class="catalog-item">
@@ -118,8 +118,8 @@
               <p>2 500 руб.</p>
               <img src="img/item-1.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
               <div class="catalog-item-hover">
-                <button class="btn">В корзину</button>
-                <button class="add-to-comparison">Добавить к сравнению</button>
+                <button class="btn" type="button">В корзину</button>
+                <button class="add-to-comparison" type="button">Добавить к сравнению</button>
               </div>
             </article>
             <article class="catalog-item">
@@ -127,8 +127,8 @@
               <p>4 500 руб.</p>
               <img src="img/item-1.jpg" width="360" height="380" alt="Селфи-палка &#171;Следуй за мной&#187;">
               <div class="catalog-item-hover">
-                <button class="btn">В корзину</button>
-                <button class="add-to-comparison">Добавить к сравнению</button>
+                <button class="btn" type="button">В корзину</button>
+                <button class="add-to-comparison" type="button">Добавить к сравнению</button>
               </div>
             </article>
           </div>
@@ -145,7 +145,7 @@
   </main>
   <footer class="main-footer">
     <div class="container">
-      <div class="logo"><img src="img/logo-footer.svg" width="184" height="40" alt="Device"></div>
+      <div class="logo"><a href="index.html"><img src="img/logo-footer.svg" width="184" height="40" alt="Device"></a></div>
       <div class="footer-user-area">
         <p class="user-block"><a href="#">Выйти</a></p>
         <p>
