--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       </div>
       <nav class="main-nav">
         <ul>
-          <li>Каталог товаров
-            <button class="main-nav-submenu-open">Открыть подменю каталога</button>
+          <li>
+            <button class="main-nav-submenu-open" type="button">Каталог товаров</button>
             <div class="catalog-submenu">
               <ul>
                 <li><a href="#">Виртуальная реальность</a></li>
@@ -140,12 +140,12 @@
       </ul>
     </div>
   </section>
-  <section class="container logotypes">
+  <section class="container partners">
     <h2 class="visually-hidden">Партнёры</h2>
-    <img src="img/logo-1.jpg" width="260" height="100" alt="DJI">
-    <img src="img/logo-2.jpg" width="260" height="100" alt="SP Gadgets">
-    <img src="img/logo-3.jpg" width="260" height="100" alt="GoPro">
-    <img src="img/logo-4.jpg" width="260" height="100" alt="Vive">
+    <a href="https://www.dji.com/" target="_blank"><img src="img/logo-1.jpg" width="260" height="100" alt="DJI"></a>
+    <a href="http://www.sp-gadgets.com/en/" target="_blank"><img src="img/logo-2.jpg" width="260" height="100" alt="SP Gadgets"></a>
+    <a href="https://gopro.com/" target="_blank"><img src="img/logo-3.jpg" width="260" height="100" alt="GoPro"></a>
+    <a href="https://www.vive.com/ru/" target="_blank"><img src="img/logo-4.jpg" width="260" height="100" alt="Vive"></a>
   </section>
   <div class="container about-contacts">
     <section class="about-us">
@@ -163,7 +163,7 @@
       <h2 class="header">Контакты</h2>
       <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
       <p><img src="img/map.jpg" width="560" height="222" alt=""></p>
-      <button class="btn">Напишите нам</button>
+      <button class="btn" type="button">Напишите нам</button>
       <section class="write-us">
         <h2 class="visually-hidden">Форма обратной связи</h2>
         <form method="post">
@@ -178,7 +178,7 @@
           </p>
           <button class="btn" type="submit">Отправить</button>
         </form>
-        <button class="write-us-close">Закрыть форму</button>
+        <button class="write-us-close" type="button">Закрыть форму</button>
       </section>
     </section>
   </div>
